kubernetes/apps/home-assistant/home-assistant/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-proxy
      namespace: kube-system
      sectionName: https
  hostnames:
    - homeassistant.jetersen.dev
  rules:
    - backendRefs:
        - name: home-assistant
          port: 8123
